@@ -2,17 +2,11 @@ package com.snnsoluciones.backnathbitpos.controller;
 
 import com.snnsoluciones.backnathbitpos.dto.common.ApiResponse;
 import com.snnsoluciones.backnathbitpos.dto.factura.*;
-import com.snnsoluciones.backnathbitpos.entity.*;
-import com.snnsoluciones.backnathbitpos.enums.EstadoSesion;
-import com.snnsoluciones.backnathbitpos.enums.mh.CondicionVenta;
-import com.snnsoluciones.backnathbitpos.enums.mh.MedioPago;
-import com.snnsoluciones.backnathbitpos.enums.mh.TipoDocumento;
-import com.snnsoluciones.backnathbitpos.repository.*;
-import com.snnsoluciones.backnathbitpos.security.jwt.JwtTokenProvider;
+import com.snnsoluciones.backnathbitpos.entity.Factura;
 import com.snnsoluciones.backnathbitpos.service.FacturaService;
+import com.snnsoluciones.backnathbitpos.service.impl.FacturaResponseBuilder;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -21,268 +15,198 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
-@RequestMapping("/api/facturas")
+@RequestMapping("/api/v1/facturas")
 @RequiredArgsConstructor
-@Tag(name = "Facturas", description = "Gestión de facturas y documentos")
+@Tag(name = "Facturas", description = "Gestión de facturas y documentos electrónicos")
 public class FacturaController {
-    
-    private final FacturaService facturaService;
-    private final ClienteRepository clienteRepository;
-    private final ProductoRepository productoRepository;
-    private final TerminalRepository terminalRepository;
-    private final SesionCajaRepository sesionCajaRepository;
-    private final UsuarioRepository usuarioRepository;
-    private final JwtTokenProvider jwtService;
 
+    private final FacturaService facturaService;
+    private final FacturaResponseBuilder responseBuilder;
+
+    @Operation(summary = "Crear nueva factura",
+        description = "Crea una factura con soporte para otros cargos, descuentos y múltiples monedas")
     @PostMapping
-    @PreAuthorize("hasAnyRole('CAJERO', 'JEFE_CAJAS', 'ADMIN', 'SUPER_ADMIN')")
+    @PreAuthorize("hasAnyRole('CAJERO', 'JEFE_CAJAS', 'SUPER_ADMIN', 'ADMIN')")
     public ResponseEntity<ApiResponse<FacturaResponse>> crear(
-        @Valid @RequestBody CrearFacturaRequest request,
-        HttpServletRequest httpRequest) {
+        @Valid @RequestBody CrearFacturaRequest request) {
+
+        log.info("Creando factura tipo: {} para cliente: {}",
+            request.getTipoDocumento(), request.getClienteId());
 
         try {
-            log.info("Creando factura para cliente: {}", request.getClienteId());
-
-            // Obtener usuario del JWT
-            String authHeader = httpRequest.getHeader("Authorization");
-            if (authHeader == null || !authHeader.startsWith("Bearer ")) {
-                throw new RuntimeException("Token no válido");
-            }
-
-            String token = authHeader.substring(7);
-            String username = jwtService.getEmailFromToken(token); // Asumo que tienes JwtService
-
-            Usuario cajero = usuarioRepository.findByEmail(username)
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
-
-            // Obtener terminal del request
-            Terminal terminal = terminalRepository.findById(request.getTerminalId())
-                .orElseThrow(() -> new RuntimeException("Terminal no encontrada"));
-
-            // Obtener sesión de caja del request
-            SesionCaja sesionCaja = sesionCajaRepository.findById(request.getSesionCajaId())
-                .orElseThrow(() -> new RuntimeException("Sesión de caja no encontrada"));
-
-            // Validar que la sesión esté abierta y sea de la terminal correcta
-            if (!sesionCaja.getEstado().equals(EstadoSesion.ABIERTA)) {
-                throw new RuntimeException("La sesión de caja está cerrada");
-            }
-
-            if (!sesionCaja.getTerminal().getId().equals(request.getTerminalId())) {
-                throw new RuntimeException("La sesión no corresponde a la terminal seleccionada");
-            }
-
-            // Obtener cliente
-            Cliente cliente = clienteRepository.findById(request.getClienteId())
-                .orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
-
-            // Construir entidad Factura
-            Factura factura = new Factura();
-            factura.setCliente(cliente);
-            factura.setTipoDocumento(request.getTipoDocumento());
-            factura.setCondicionVenta(CondicionVenta.fromCodigo(request.getCondicionVenta()));
-            factura.setPlazoCredito(request.getPlazoCredito());
-            factura.setTerminal(terminal);
-            factura.setSucursal(terminal.getSucursal());
-            factura.setSesionCaja(sesionCaja);
-            factura.setCajero(cajero);
-            factura.setDescuentos(request.getDescuento() != null ? request.getDescuento() : BigDecimal.ZERO);
-            factura.setFechaEmision(LocalDateTime.now());
-
-            // Construir detalles
-            List<FacturaDetalle> detalles = new ArrayList<>();
-            int numeroLinea = 1;
-
-            for (DetalleFacturaRequest detalleReq : request.getDetalles()) {
-                Producto producto = productoRepository.findById(detalleReq.getProductoId())
-                    .orElseThrow(() -> new RuntimeException("Producto no encontrado: " + detalleReq.getProductoId()));
-
-                FacturaDetalle detalle = new FacturaDetalle();
-                detalle.setNumeroLinea(numeroLinea++);
-                detalle.setProducto(producto);
-                detalle.setCantidad(detalleReq.getCantidad());
-                detalle.setPrecioUnitario(detalleReq.getPrecioUnitario());
-                detalle.setMontoDescuento(detalleReq.getDescuento() != null ? detalleReq.getDescuento() : BigDecimal.ZERO);
-                detalle.setUnidadMedida(producto.getUnidadMedida().name());
-                detalle.setCodigoCabys(producto.getEmpresaCabys().getCodigoCabys().getCodigo());
-                detalle.setDetalle(detalleReq.getDescripcionPersonalizada() != null
-                    ? detalleReq.getDescripcionPersonalizada()
-                    : producto.getDescripcion());
-
-                detalles.add(detalle);
-            }
-
-            // Construir medios de pago
-            List<FacturaMedioPago> mediosPago = new ArrayList<>();
-            for (MedioPagoRequest medioPagoReq : request.getMediosPago()) {
-                FacturaMedioPago medioPago = new FacturaMedioPago();
-                medioPago.setMedioPago(MedioPago.fromCodigo(medioPagoReq.getMedioPago()));
-                medioPago.setMonto(medioPagoReq.getMonto());
-                medioPago.setReferencia(medioPagoReq.getReferencia());
-                medioPago.setBanco(medioPagoReq.getBanco());
-
-                mediosPago.add(medioPago);
+            // Validación adicional del request
+            if (!request.isValid()) {
+                return ResponseEntity.badRequest()
+                    .body(ApiResponse.error("Datos de factura inválidos"));
             }
 
             // Crear factura
-            Factura facturaCreada = facturaService.crear(factura, detalles, mediosPago);
+            Factura factura = facturaService.crear(request);
 
-            // Construir respuesta
-            FacturaResponse response = construirResponse(facturaCreada);
-            response.setMensaje("Factura creada exitosamente");
+            // Construir response
+            FacturaResponse response = responseBuilder.construirResponse(factura);
+
+            log.info("Factura creada exitosamente: {}", factura.getConsecutivo());
 
             return ResponseEntity.status(HttpStatus.CREATED)
-                .body(ApiResponse.ok("Factura creada exitosamente", response));
+                .body(ApiResponse.ok(
+                    "Factura creada exitosamente",
+                    response
+                ));
+
+        } catch (IllegalArgumentException e) {
+            log.error("Error de validación al crear factura: {}", e.getMessage());
+            return ResponseEntity.badRequest()
+                .body(ApiResponse.error(e.getMessage()));
 
         } catch (Exception e) {
-            log.error("Error creando factura: {}", e.getMessage(), e);
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                .body(ApiResponse.error("Error al crear factura: " + e.getMessage()));
+            log.error("Error inesperado al crear factura", e);
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(ApiResponse.error("Error al crear la factura: " + e.getMessage()));
         }
     }
-    
+
+    @Operation(summary = "Buscar factura por ID")
+    @GetMapping("/{id}")
+    @PreAuthorize("hasAnyRole('CAJERO', 'JEFE_CAJAS', 'ADMIN', 'SUPER_ADMIN')")
+    public ResponseEntity<ApiResponse<FacturaResponse>> buscarPorId(@PathVariable Long id) {
+        return facturaService.buscarPorId(id)
+            .map(factura -> ResponseEntity.ok(
+                ApiResponse.ok(responseBuilder.construirResponse(factura))
+            ))
+            .orElse(ResponseEntity.notFound().build());
+    }
+
     @Operation(summary = "Buscar factura por clave")
     @GetMapping("/clave/{clave}")
     @PreAuthorize("hasAnyRole('CAJERO', 'JEFE_CAJAS', 'ADMIN', 'SUPER_ADMIN')")
     public ResponseEntity<ApiResponse<FacturaResponse>> buscarPorClave(@PathVariable String clave) {
         return facturaService.buscarPorClave(clave)
-            .map(factura -> ResponseEntity.ok(ApiResponse.ok(construirResponse(factura))))
+            .map(factura -> ResponseEntity.ok(
+                ApiResponse.ok(responseBuilder.construirResponse(factura))
+            ))
             .orElse(ResponseEntity.notFound().build());
     }
-    
+
     @Operation(summary = "Buscar factura por consecutivo")
     @GetMapping("/consecutivo/{consecutivo}")
     @PreAuthorize("hasAnyRole('CAJERO', 'JEFE_CAJAS', 'ADMIN', 'SUPER_ADMIN')")
-    public ResponseEntity<ApiResponse<FacturaResponse>> buscarPorConsecutivo(@PathVariable String consecutivo) {
+    public ResponseEntity<ApiResponse<FacturaResponse>> buscarPorConsecutivo(
+        @PathVariable String consecutivo) {
         return facturaService.buscarPorConsecutivo(consecutivo)
-            .map(factura -> ResponseEntity.ok(ApiResponse.ok(construirResponse(factura))))
+            .map(factura -> ResponseEntity.ok(
+                ApiResponse.ok(responseBuilder.construirResponse(factura))
+            ))
             .orElse(ResponseEntity.notFound().build());
     }
 
+    @Operation(summary = "Listar facturas de sesión actual")
     @GetMapping("/sesion-actual")
     @PreAuthorize("hasAnyRole('CAJERO', 'JEFE_CAJAS')")
     public ResponseEntity<ApiResponse<List<FacturaListaResponse>>> listarSesionActual(
-        @RequestParam Long sesionCajaId) { // Ahora viene como parámetro
+        @RequestParam Long sesionCajaId) {
 
         List<Factura> facturas = facturaService.listarPorSesionCaja(sesionCajaId);
         List<FacturaListaResponse> response = facturas.stream()
-            .map(this::construirListaResponse)
-            .toList();
+            .map(responseBuilder::construirListaResponse)
+            .collect(Collectors.toList());
 
-        return ResponseEntity.ok(ApiResponse.ok(response));
-    }
-    
-    @Operation(summary = "Listar facturas con error")
-    @GetMapping("/errores/{sucursalId}")
-    @PreAuthorize("hasAnyRole('ADMIN', 'SUPER_ADMIN', 'JEFE_CAJAS')")
-    public ResponseEntity<ApiResponse<List<FacturaListaResponse>>> listarConError(@PathVariable Long sucursalId) {
-        List<Factura> facturas = facturaService.listarFacturasConError(sucursalId);
-        List<FacturaListaResponse> response = facturas.stream()
-            .map(this::construirListaResponse)
-            .toList();
-        
         return ResponseEntity.ok(ApiResponse.ok(
-            "Se encontraron " + response.size() + " facturas con error", 
+            String.format("Se encontraron %d facturas", response.size()),
             response
         ));
     }
-    
-    @Operation(summary = "Anular factura")
+
+    @Operation(summary = "Listar facturas con error")
+    @GetMapping("/errores/{sucursalId}")
+    @PreAuthorize("hasAnyRole('ADMIN', 'SUPER_ADMIN', 'JEFE_CAJAS')")
+    public ResponseEntity<ApiResponse<List<FacturaListaResponse>>> listarConError(
+        @PathVariable Long sucursalId) {
+
+        List<Factura> facturas = facturaService.listarFacturasConError(sucursalId);
+        List<FacturaListaResponse> response = facturas.stream()
+            .map(responseBuilder::construirListaResponse)
+            .collect(Collectors.toList());
+
+        return ResponseEntity.ok(ApiResponse.ok(
+            String.format("Se encontraron %d facturas con error", response.size()),
+            response
+        ));
+    }
+
+    @Operation(summary = "Anular factura",
+        description = "Anula una factura. En el futuro generará nota de crédito si es necesario")
     @PostMapping("/{id}/anular")
     @PreAuthorize("hasAnyRole('JEFE_CAJAS', 'ADMIN', 'SUPER_ADMIN')")
     public ResponseEntity<ApiResponse<FacturaResponse>> anular(
-            @PathVariable Long id,
-            @Valid @RequestBody AnularFacturaRequest request) {
-        
+        @PathVariable Long id,
+        @RequestBody @Valid AnularFacturaRequest request) {
+
         try {
-            Factura facturaAnulada = facturaService.anular(id, request.getMotivo());
-            FacturaResponse response = construirResponse(facturaAnulada);
-            response.setMensaje("Factura anulada exitosamente");
-            
-            return ResponseEntity.ok(ApiResponse.ok("Factura anulada", response));
-            
-        } catch (Exception e) {
+            Factura factura = facturaService.anular(id, request.getMotivo());
+            FacturaResponse response = responseBuilder.construirResponse(factura);
+
+            return ResponseEntity.ok(ApiResponse.ok(
+                "Factura anulada exitosamente",
+                response
+            ));
+
+        } catch (RuntimeException e) {
+            log.error("Error al anular factura {}: {}", id, e.getMessage());
             return ResponseEntity.badRequest()
-                .body(ApiResponse.error("Error al anular: " + e.getMessage()));
+                .body(ApiResponse.error(e.getMessage()));
         }
     }
-    
-    @Operation(summary = "Reenviar factura a Hacienda")
+
+    @Operation(summary = "Reenviar factura a Hacienda",
+        description = "Reintenta el envío de una factura con error")
     @PostMapping("/{id}/reenviar")
-    @PreAuthorize("hasAnyRole('ADMIN', 'SUPER_ADMIN')")
+    @PreAuthorize("hasAnyRole('JEFE_CAJAS', 'ADMIN', 'SUPER_ADMIN')")
     public ResponseEntity<ApiResponse<String>> reenviar(@PathVariable Long id) {
+
         try {
             facturaService.reenviar(id);
+
             return ResponseEntity.ok(ApiResponse.ok(
-                "Factura marcada para reenvío", 
-                "La factura será procesada nuevamente en breve"
+                "Factura marcada para reenvío. El proceso se ejecutará en segundo plano."
             ));
-        } catch (Exception e) {
+
+        } catch (RuntimeException e) {
+            log.error("Error al reenviar factura {}: {}", id, e.getMessage());
             return ResponseEntity.badRequest()
-                .body(ApiResponse.error("Error al reenviar: " + e.getMessage()));
+                .body(ApiResponse.error(e.getMessage()));
         }
     }
-    
-    // Métodos helper privados
-    
-    private Long obtenerUsuarioId(HttpServletRequest request) {
-        // TODO: Extraer del JWT token
-        return 1L; // Hardcodeado por ahora
-    }
-    
-    private FacturaResponse construirResponse(Factura factura) {
-        return FacturaResponse.builder()
-            .id(factura.getId())
-            .clave(factura.getClave())
-            .consecutivo(factura.getConsecutivo())
-            .tipoDocumento(factura.getTipoDocumento().getCodigo())
-            .tipoDocumentoNombre(factura.getTipoDocumento().getDescripcion())
-            .fechaEmision(factura.getFechaEmision())
-            .estado(factura.getEstado().name())
-            .clienteId(factura.getCliente().getId())
-            .clienteNombre(factura.getCliente().getRazonSocial())
-            .clienteIdentificacion(factura.getCliente().getNumeroIdentificacion())
-            .subtotal(factura.getSubtotal())
-            .descuentos(factura.getDescuentos())
-            .impuestos(factura.getImpuestos())
-            .total(factura.getTotal())
-            .sucursalNombre(factura.getSucursal().getNombre())
-            .terminalNombre(factura.getTerminal().getNombre())
-            .cajeroNombre(factura.getCajero().getNombre() + " " + factura.getCajero().getApellidos())
-            .puedeAnularse(factura.getEstado().puedeAnularse())
-            .puedeReenviarse(factura.getEstado().puedeReprocesarse())
-            .esElectronica(factura.esElectronica())
-            .build();
-    }
-    
-    private FacturaListaResponse construirListaResponse(Factura factura) {
-        String estadoColor = switch (factura.getEstado()) {
-            case ACEPTADA -> "green";
-            case RECHAZADA, ERROR -> "red";
-            case PROCESANDO, ENVIADA -> "yellow";
-            case ANULADA -> "gray";
-            default -> "blue";
-        };
-        
-        return FacturaListaResponse.builder()
-            .id(factura.getId())
-            .consecutivo(factura.getConsecutivo())
-            .tipoDocumento(factura.getTipoDocumento().getCodigo())
-            .fechaEmision(factura.getFechaEmision())
-            .clienteNombre(factura.getCliente().getRazonSocial())
-            .total(factura.getTotal())
-            .estado(factura.getEstado().getDescripcion())
-            .estadoColor(estadoColor)
-            .puedeImprimir(true)
-            .puedeAnular(factura.getEstado().puedeAnularse())
-            .puedeReenviar(factura.getEstado().puedeReprocesarse())
-            .build();
+
+    @Operation(summary = "Validar totales de factura",
+        description = "Endpoint de utilidad para validar cálculos antes de crear la factura")
+    @PostMapping("/validar-totales")
+    @PreAuthorize("hasAnyRole('CAJERO', 'JEFE_CAJAS')")
+    public ResponseEntity<ApiResponse<ValidacionTotalesResponse>> validarTotales(
+        @Valid @RequestBody ValidacionTotalesRequest request) {
+
+        try {
+            ValidacionTotalesResponse response = facturaService.validarTotales(request);
+
+            if (response.isEsValido()) {
+                return ResponseEntity.ok(ApiResponse.ok(
+                    "Validación exitosa",
+                    response
+                ));
+            } else {
+                return ResponseEntity.badRequest()
+                    .body(ApiResponse.error(response.getMensaje(), response));
+            }
+
+        } catch (Exception e) {
+            log.error("Error al validar totales", e);
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(ApiResponse.error("Error al validar totales: " + e.getMessage()));
+        }
     }
 }
